cilium/content/ingress.yml
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: basicauth
spec:
  basicAuth:
    secret: htaccess
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: basicauthremove
spec:
  basicAuth:
    removeHeader: true
    secret: htaccess
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: hubble-ui
spec:
  entryPoints:
  - http
  - https
  routes:
  - match: HostRegexp(`hubble.{domain:.+}`)
    kind: Rule
    middlewares:
    - name: basicauth
    services:
    - name: hubble-ui
      port: 80
  - match: HostRegexp(`hubble-relay.{domain:.+}`)
    kind: Rule
    middlewares:
    - name: basicauth
    services:
    - name: hubble-relay
      port: 80
